next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (SVN trunk, 6.1-dev, future 6.2): 
-------------------------------------------------
- Add runtime substitution for "filename" output format option (#3571) and
  allow setting defaults in either metadata or validation (preferred) blocks
  for both layer and output format.

- Add non antialiased text rendering for GD (#3896)

- Fixed OGC filter using expressions (#3481)

- Fix incorrect rendering of GD lines between 1 and 2 pixels wide (#3962)

- Add gamma correction to AGG polygon rendering (#3165)

- Initialize the scalebar image color to transparent by default (#3957)

IMPORTANT SECURITY FIX:

-  Fixes to prevent SQL injections through OGC filter encoding (in WMS, WFS 
   and SOS), as well as a potential SQL injection in WMS time support. 
   Your system may be vulnerable if it has MapServer with OGC protocols 
   enabled, with layers connecting to an SQL RDBMS backend, either 
   natively or via OGR (#3903)

- Fix performance issue with Oracle and scrollable cursors (#3905)

- Fix attribute binding for layer styles (#3941)

- Added missing fclose() when writing query files (#3943)

- Fix double-free in msAddImageSymbol() when filename is a http resource (#3939)

- Fix rendering of lines with outlinewidth set if not on first style (#3935)

- Correct SLD with spatial filters bbox and intersects (#3929)

- Applied patch for ticket (symbol writing issues) (#3589)

- Added WMS GetFeatureInfo Cascading (#3764)

- Fixed png lib is not found on multiarch systems (#3921)

- Fixed PHP MapScript opacity property of StyleObj no longer works (#3920)

- Fixed Using STYLEITEM AUTO, loadExpression fails when the label text
  contains a space or begins with a double quote (#3481)
